server/packages/sandbox-agent/tests/http/snapshots/http_sse_snapshots__api_endpoints_snapshots@agent_modes_mock.snap
---
source: server/packages/sandbox-agent/tests/http/http_sse_snapshots.rs
assertion_line: 1034
expression: normalize_agent_modes(&modes)
---
modes:
  - description: true
    id: build
    name: Build
  - description: true
    id: plan
    name: Plan
