server/packages/sandbox-agent/tests/http/snapshots/http_sse_snapshots__api_endpoints_snapshots@create_session_opencode.snap
---
source: server/packages/sandbox-agent/tests/http_sse_snapshots.rs
expression: normalize_create_session(&created)
---
agentSessionId: "<redacted>"
healthy: true
