server/packages/sandbox-agent/tests/http/snapshots/http_sse_snapshots__approval_flow_snapshots@permission_reply_missing_mock.snap
---
source: server/packages/sandbox-agent/tests/http/http_sse_snapshots.rs
assertion_line: 1152
expression: "json!({ \"status\": status.as_u16(), \"payload\": payload, })"
---
payload:
  detail: "invalid request: unknown permission id: missing-permission"
  status: 400
  title: Invalid Request
  type: "urn:sandbox-agent:error:invalid_request"
status: 400
